--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-deck-swiper": "^1.6.7",
     "react-native-gesture-handler": "^1.5.2",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-screens": "^1.0.0-alpha.23",
     "react-native-view-overflow": "0.0.4",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "^8.0.1",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "~2.6.2",
