--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "~10.0.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "cross-fetch": "^3.0.4",
+    "deprecated-react-native-listview": "0.0.6",
     "expo": "~36.0.0",
     "expo-asset": "~8.0.0",
     "expo-constants": "~8.0.0",
@@ -27,6 +28,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-deck-swiper": "^1.6.7",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-masonry": "^0.5.0-alpha.5",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-view-overflow": "0.0.4",
