--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/samples": "~36.0.0",
     "@expo/vector-icons": "~10.0.0",
+    "@react-native-community/async-storage": "^1.7.1",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "cross-fetch": "^3.0.4",
     "deprecated-react-native-listview": "0.0.6",
