--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@expo/samples": "~36.0.0",
     "@expo/vector-icons": "~10.0.0",
-    "@react-native-community/async-storage": "^1.7.1",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "cross-fetch": "^3.0.4",
     "deprecated-react-native-listview": "0.0.6",
@@ -23,10 +22,11 @@
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-web-browser": "~8.0.0",
+    "formik": "^2.0.8",
     "lodash": "^4.17.15",
-    "react": "~16.9.0",
+    "react": "16.9.0",
     "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native": "0.61.5",
     "react-native-deck-swiper": "^1.6.7",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-masonry": "^0.5.0-alpha.5",
@@ -34,7 +34,6 @@
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-view-overflow": "0.0.4",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "^8.0.1",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "~2.6.2",
