--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.28.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
