--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-masonry": "^0.5.0-alpha.5",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-svg": "^9.13.6",
     "react-native-view-overflow": "0.0.4",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
